<resources>
    <string name="app_name">WanAndroid</string>

    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="prompt_already_sign_up">已注册，</string>

    <string name="error_length_in_password">密码不安全</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_not_null_username">用户名不能为空</string>

    <string name="text_register">注册新账号</string>
    <string name="text_login">已注册，去登录</string>

    <string name="bottom_view_main">主页</string>
    <string name="bottom_view_hall">导航</string>
    <string name="bottom_view_personal">个人中心</string>

    <string name="search_query_hint">请输入搜索的内容</string>

    <string name="item_text_author_hint">作者: </string>
    <string name="item_text_same_project">查看同类项目</string>
    <string name="item_text_more">查看更多</string>

    <string name="load_status_loading">正在加载中</string>
    <string name="load_status_complete">加载更多</string>
    <string name="load_status_end">滑倒底部了</string>
    <string name="tab_item_tree">体系</string>
    <string name="tab_item_navi">导航</string>
    <string name="tab_item_project">项目</string>

    <string name="person_text_id_tip">ID号</string>
    <string name="person_text_id">未填写</string>
    <string name="person_text_username_tip">用户名</string>
    <string name="person_text_username">未填写</string>
    <string name="person_text_email_tip">邮箱</string>
    <string name="person_text_email">未关联</string>
    <string name="person_text_collect">收藏</string>
    <string name="person_text_about">关于</string>
    <string name="person_text_logout">注销</string>

    <string name="layout_scroll_hide_behavior">com.din.wanandroid.util.ScrollHideBehavior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_tables">TablesActivity</string>


</resources>